--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -1,9 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateActivity">
+    tools:context=".MainActivity"
+    android:background="@color/Light_Green">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/vwAppTitleBar"
+        android:layout_width="4dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
+
+    <ImageView
+        android:id="@+id/imgBlackTurtle"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:srcCompat="@drawable/cogturtle"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="10dp"
+        android:rotation="-45"
+        />
+
+    <LinearLayout
+        android:id="@+id/llHomeActivities"
+        android:layout_width="389dp"
+        android:layout_height="86dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/vwAppTitleBar"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvAppTitleWelcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create / Edit"
+            android:textColor="@color/Dark_Green"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvAppTitleName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Activity"
+            android:textColor="@color/Dark_Green"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+    <View
+        android:layout_below="@id/llHomeActivities"
+        android:id="@+id/vwEntryBackground"
+        android:layout_width="match_parent"
+        android:layout_height="640dp"
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
+
+    <LinearLayout
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/llHomeActivities"
+        android:id="@+id/llActivityPage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtActivty"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/rounded_rectangle"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/btnClick"
+            android:layout_width="220dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="350dp"
+            android:background="@drawable/rounded_item_box"
+            android:text=""
+            android:theme="@style/button_colour_white"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgTurtle"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="658dp"
+        android:layout_marginLeft="162dp"
+        app:srcCompat="@drawable/cyanturtle" />
+
+</RelativeLayout>
