--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -73,7 +73,7 @@
     <LinearLayout
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/llHomeActivities"
         android:id="@+id/llActivityPage"
         android:layout_width="match_parent"
@@ -81,33 +81,153 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtActivty"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_marginTop="30dp"
+            android:id="@+id/txtActivtyNameHeading"
+            android:layout_width="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Name" />
+
+        <TextView
+            android:id="@+id/txtActivtyName"
+            android:layout_width="280dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="TextView" />
+            android:text="" />
+
+        <TextView
+            android:id="@+id/txtActivtyDateHeading"
+            android:layout_width="60dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Date" />
+
+        <EditText
+            android:id="@+id/txtDate"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/txtActivtyStartEndHeading"
+            android:layout_width="160dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Start/End Times" />
+
+        <EditText
+            android:id="@+id/txtStartEndDate"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/txtActivtyDescriptionHeading"
+            android:layout_width="120dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Description" />
+
+        <TextView
+            android:id="@+id/txtDescription"
+            android:layout_width="280dp"
+            android:layout_height="85dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/rounded_rectangle"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/txtCategoryHeading"
+            android:layout_width="120dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Description" />
+
+        <Spinner
+            android:id="@+id/spCategory"
+            android:layout_width="280dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="20dp"
+            android:spinnerMode="dropdown"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/rounded_rectangle"/>
+
+        <Button
+            android:id="@+id/btnInsertImage"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_item_box"
+            android:text="Insert Image"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:theme="@style/button_colour_green"/>
 
         <Button
             android:id="@+id/btnClick"
-            android:layout_width="220dp"
+            android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="350dp"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            android:text="Save"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:theme="@style/button_colour_green" />
 
+        <TextView
+            android:id="@+id/txtNeedHelp"
+            android:layout_width="120dp"
+            android:layout_marginLeft="118dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Need Help?" />
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgTurtle"
-        android:layout_width="70dp"
+        android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginTop="658dp"
-        android:layout_marginLeft="162dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginLeft="325dp"
+        android:rotation="245"
         app:srcCompat="@drawable/cyanturtle" />
 
+    <ImageView
+        android:id="@+id/imgTurtle2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="610dp"
+        android:layout_marginLeft="290dp"
+        android:rotation="40"
+        app:srcCompat="@drawable/greenturtle" />
 </RelativeLayout>
