--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -170,11 +170,12 @@
         <Spinner
             android:id="@+id/spCategory"
             android:layout_width="280dp"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:layout_marginLeft="20dp"
-            android:spinnerMode="dropdown"
             android:layout_marginTop="5dp"
-            android:background="@drawable/rounded_rectangle"/>
+            android:background="@drawable/rounded_rectangle"
+            android:spinnerMode="dropdown"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
             android:id="@+id/btnInsertImage"
