--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -81,7 +81,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtActivtyNameHeading"
+            android:id="@+id/tvActivtyNameHeading"
             android:layout_width="60dp"
             android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
             android:text="" />
 
         <TextView
-            android:id="@+id/txtActivtyDateHeading"
+            android:id="@+id/tvActivtyDateHeading"
             android:layout_width="60dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
@@ -119,7 +119,7 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
-            android:id="@+id/txtActivtyStartEndHeading"
+            android:id="@+id/tvActivtyStartEndHeading"
             android:layout_width="160dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
@@ -139,7 +139,7 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
-            android:id="@+id/txtActivtyDescriptionHeading"
+            android:id="@+id/tvActivtyDescriptionHeading"
             android:layout_width="120dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
@@ -158,7 +158,7 @@
             android:text="" />
 
         <TextView
-            android:id="@+id/txtCategoryHeading"
+            android:id="@+id/tvCategoryHeading"
             android:layout_width="120dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
