--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -117,17 +117,80 @@
         android:textAlignment="center"
         />
 
+
     <LinearLayout
-        android:id="@+id/llGoalTypes"
+
+        android:orientation="vertical"
         android:layout_width="300dp"
         android:layout_height="160dp"
-        android:layout_below="@id/tvGoalHeading"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Input_Grey"
-        android:orientation="horizontal"/>
+        android:layout_below="@id/tvGoalHeading"
+        android:layout_centerHorizontal="true">
 
+        <LinearLayout
+            android:id="@+id/llGoalFrameHeadings"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvHoursPrompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Hours"
+                android:layout_weight="1"
+                android:textColor="@color/Input_Grey"
+                android:background="@drawable/heading_backing_rounded"
+                android:backgroundTint="@color/Muted_Green"
+                android:textSize="16dp"
+                android:textAlignment="center"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:paddingVertical="2dp"/>
+
+            <TextView
+                android:id="@+id/tvFramePrompt"
+                android:layout_width="43dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Time Frame"
+                android:layout_weight="1"
+                android:background="@drawable/heading_backing_rounded"
+                android:backgroundTint="@color/Muted_Green"
+                android:textColor="@color/Input_Grey"
+                android:textSize="16dp"
+                android:textAlignment="center"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:paddingVertical="2dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llGoalFrameValues"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <NumberPicker
+                android:id="@+id/npHourGoal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="10dp"/>
+
+            <NumberPicker
+                android:id="@+id/npTimeFrameGoal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
