--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -90,7 +90,7 @@
 
 
     <TextView
-        android:text="TextView"
+        android:text="{activityName}}"
         android:layout_marginTop="4dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tvActivityName"
@@ -113,13 +113,13 @@
         android:layout_weight="1"
         android:textSize="20dp"
         android:textColor="@color/Input_Grey"
-        android:text="Goals"
+        android:text="Goal"
         android:textAlignment="center"
         />
 
 
     <LinearLayout
-
+        android:id="@+id/llGoalTime"
         android:orientation="vertical"
         android:layout_width="300dp"
         android:layout_height="160dp"
@@ -192,5 +192,76 @@
         </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvSaveButton"
+        android:layout_below="@id/llGoalTime"
+        android:layout_marginTop="34dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="24dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Save"
+        android:textAlignment="center"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Muted_Green"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="60dp"
+        android:textStyle="bold"
+        android:onClick="onClick"
+        android:clickable="true"/>
+
+    <TextView
+        android:id="@+id/tvNeedHelpButton"
+        android:layout_below="@id/tvSaveButton"
+        android:layout_marginTop="4dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="16dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Need Help?"
+        android:textAlignment="center"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="60dp"
+        android:textStyle="bold"
+        android:onClick="onClick"
+        android:clickable="true"/>
+
+    <ImageView
+        android:id="@+id/imgCyanTurtle"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:srcCompat="@drawable/cyanturtle"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="36dp"
+        android:rotation="25"
+        android:layout_below="@id/tvActivityName"
+        />
+
+    <ImageView
+        android:id="@+id/imgGreenTurtle"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
+        app:srcCompat="@drawable/greenturtle"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:rotation="-30"
+        android:layout_below="@id/tvNeedHelpButton"
+        />
+
+    <ImageView
+        android:id="@+id/imgBrownTurtle"
+        android:layout_width="84dp"
+        android:layout_height="84dp"
+        app:srcCompat="@drawable/brownturtle"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="10dp"
+        android:rotation="235"
+        android:layout_below="@id/tvSaveButton"
+        android:layout_toRightOf="@id/imgGreenTurtle"
+        />
 
 </RelativeLayout>
