--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -144,7 +144,7 @@
                 android:layout_weight="1"
                 android:textColor="@color/Input_Grey"
                 android:background="@drawable/heading_backing_rounded"
-                android:backgroundTint="@color/Muted_Green"
+                android:backgroundTint="@color/Light_Green"
                 android:textSize="16dp"
                 android:textAlignment="center"
                 android:layout_marginRight="10dp"
@@ -159,7 +159,7 @@
                 android:text="Time Frame"
                 android:layout_weight="1"
                 android:background="@drawable/heading_backing_rounded"
-                android:backgroundTint="@color/Muted_Green"
+                android:backgroundTint="@color/Light_Green"
                 android:textColor="@color/Input_Grey"
                 android:textSize="16dp"
                 android:textAlignment="center"
