--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -43,10 +43,7 @@
             android:textColor="@color/Dark_Green"
             android:textSize="34sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+          />
 
         <TextView
             android:id="@+id/tvCategory"
@@ -55,10 +52,7 @@
             android:text="Category"
             android:textColor="@color/Dark_Green"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+          />
 
     </LinearLayout>
 
@@ -210,7 +204,8 @@
             android:layout_height="98dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="Description" />
+            android:text="Description"
+            android:padding="5dp"/>
 
 
         <LinearLayout
@@ -236,6 +231,17 @@
                     android:layout_marginLeft="60dp"
                     android:layout_marginTop="20dp"
                     app:srcCompat="@drawable/cyanturtle" />
+
+
+                <ImageView
+                    android:layout_marginTop="12dp"
+                    android:id="@+id/imgTurtle"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/rounded_rectangle"
+                    app:srcCompat="@drawable/cyanturtle"
+                    android:layout_below="@id/fcFragmentContainer"/>
 
             </RelativeLayout>
 
