--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -9,139 +9,136 @@
         android:id="@+id/vwEntryMethodBar"
         android:layout_width="140dp"
         android:layout_height="5dp"
-        android:layout_marginTop="1dp"
         android:layout_marginLeft="42dp"
+        android:layout_marginTop="1dp"
         android:background="@drawable/rounded_rectangle"
-        android:backgroundTint="@color/Input_Grey"/>
+        android:backgroundTint="@color/Input_Grey" />
 
 
     <ImageView
         android:id="@+id/imgCyanTurtle"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        app:srcCompat="@drawable/cyanturtle"
+        android:layout_below="@id/vwEntryMethodBar"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="20dp"
         android:rotation="-125"
-        android:layout_below="@id/vwEntryMethodBar"/>
+        app:srcCompat="@drawable/cyanturtle" />
 
     <TextView
         android:id="@+id/tvEmailPrompt"
-        android:layout_below="@id/imgCyanTurtle"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="64dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/imgCyanTurtle"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="-20dp"
         android:layout_weight="1"
-        android:textSize="20dp"
-        android:textColor="@color/Input_Grey"
         android:text="Email:"
         android:textAlignment="center"
-        />
+        android:textColor="@color/Input_Grey"
+        android:textSize="20dp" />
 
 
     <EditText
-        android:layout_marginTop="2dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tvEmailPrompt"
-        android:layout_marginLeft="20dp"
         android:id="@+id/etEmail"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvEmailPrompt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/rounded_rectangle"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:background="@drawable/rounded_rectangle"
-        android:padding="5dp"/>
+        android:padding="5dp" />
 
 
     <TextView
         android:id="@+id/tvPasswordPrompt"
-        android:layout_below="@id/etEmail"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="64dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/etEmail"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="30dp"
         android:layout_weight="1"
-        android:textSize="20dp"
-        android:textColor="@color/Input_Grey"
         android:text="Password:"
         android:textAlignment="center"
-        />
+        android:textColor="@color/Input_Grey"
+        android:textSize="20dp" />
 
 
     <EditText
-        android:layout_marginTop="2dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tvPasswordPrompt"
-        android:layout_marginLeft="20dp"
         android:id="@+id/etPassword"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvPasswordPrompt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/rounded_rectangle"
         android:ems="10"
         android:inputType="textPassword"
-        android:background="@drawable/rounded_rectangle"
-        android:padding="5dp"/>
+        android:padding="5dp" />
 
 
     <TextView
         android:id="@+id/tvSignInButton"
-        android:layout_below="@id/etPassword"
-        android:layout_marginTop="34dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/etPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
         android:layout_weight="1"
-        android:textSize="24dp"
-        android:textColor="@color/Input_Grey"
-        android:text="Sign In"
-        android:textAlignment="center"
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Muted_Green"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="60dp"
-        android:textStyle="bold"
+        android:clickable="true"
         android:onClick="onClick"
-        android:clickable="true"/>
+        android:paddingHorizontal="60dp"
+        android:paddingVertical="5dp"
+        android:text="Sign In"
+        android:textAlignment="center"
+        android:textColor="@color/Input_Grey"
+        android:textSize="24dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvForgotPasswordButton"
-        android:layout_below="@id/tvSignInButton"
-        android:layout_marginTop="4dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvSignInButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
         android:layout_weight="1"
-        android:textSize="16dp"
-        android:textColor="@color/Input_Grey"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:paddingHorizontal="60dp"
+        android:paddingVertical="5dp"
         android:text="Forgot Password?"
         android:textAlignment="center"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="60dp"
-        android:textStyle="bold"
-        android:onClick="onClick"
-        android:clickable="true"/>
+        android:textColor="@color/Input_Grey"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
 
     <ImageView
         android:id="@+id/imgBrownTurtle"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:layout_marginTop="-20dp"
+        android:layout_below="@id/tvForgotPasswordButton"
         android:layout_marginLeft="290dp"
+        android:layout_marginTop="-20dp"
         android:rotation="-25"
-        app:srcCompat="@drawable/brownturtle"
-        android:layout_below="@id/tvForgotPasswordButton"/>
+        app:srcCompat="@drawable/brownturtle" />
 
     <ImageView
         android:id="@+id/imgGreenTurtle"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:layout_below="@id/tvForgotPasswordButton"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:rotation="30"
-        app:srcCompat="@drawable/greenturtle"
-        android:layout_below="@id/tvForgotPasswordButton"/>
-
+        app:srcCompat="@drawable/greenturtle" />
 
 
 </RelativeLayout>
