--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -37,10 +37,10 @@
         android:layout_toRightOf="@id/vwLogsBar">
 
         <TextView
-            android:id="@+id/tvAdd"
+            android:id="@+id/tvActivityName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add"
+            android:text="{ActivityName}"
             android:textColor="@color/Dark_Green"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +52,7 @@
             android:id="@+id/tvLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Log"
+            android:text="Add Log"
             android:textColor="@color/Dark_Green"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -79,31 +79,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/llAddLog"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="50dp"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tvActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Activity"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/tvActivityName"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@drawable/rounded_rectangle"
-            android:text="Activity Name"
-            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvStartDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="Start Date"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
@@ -111,27 +94,82 @@
         <DatePicker
             android:id="@+id/dpStartDate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="130dp"
             android:background="@drawable/rounded_rectangle"
             android:calendarViewShown="false"
             android:datePickerMode="spinner" />
 
         <TextView
-            android:id="@+id/tvHours"
+            android:id="@+id/tvOption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Hours"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+            android:text="Log Option"
+            android:textColor="#FFFFFF" />
 
-        <EditText
-            android:id="@+id/etHours"
+        <Spinner
+            android:id="@+id/spWatchOption"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/rounded_rectangle"
-            android:ems="10"
-            android:inputType="number" />
+            android:background="@drawable/rounded_rectangle" />
+
+        <LinearLayout
+            android:id="@+id/llStopWatch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvStopWatch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Stop Watch"
+                android:textColor="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_rectangle"
+                android:text="00:00:00"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="60sp" />
+
+            <LinearLayout
+                android:id="@+id/llStopWatchButtons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnStartStop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_rectangle"
+                    android:text="Start"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:drawableLeft="@drawable/play_arrow"
+                    android:theme="@style/button_colour_start" />
+
+                <Button
+                    android:id="@+id/btnReset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Reset"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:drawableLeft="@drawable/replay"
+                    android:background="@drawable/rounded_rectangle"
+                    android:theme="@style/button_colour_reset"/>
+            </LinearLayout>
+        </LinearLayout>
 
         <Button
             android:id="@+id/btnAdd"
@@ -147,8 +185,8 @@
 
     <ImageView
         android:id="@+id/imgBrown"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_below="@id/llLogInput"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
