--- a/app/src/main/res/layout/activity_logs_list.xml
+++ b/app/src/main/res/layout/activity_logs_list.xml
@@ -85,18 +85,35 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:text="Start Date/End Date" />
+            android:text="Start Date" />
 
-        <EditText
-            android:id="@+id/txtDate"
-            android:layout_width="280dp"
-            android:layout_height="48dp"
+        <DatePicker
+            android:id="@+id/dpStartDate"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_rectangle"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner" />
+
+        <TextView
+            android:id="@+id/tvCalendarDateHeading2"
+            android:layout_width="200dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
-            android:ems="10"
-            android:inputType="date"
-            tools:ignore="SpeakableTextPresentCheck" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="End Date" />
 
+        <DatePicker
+            android:id="@+id/dpEndDate"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_rectangle"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner" />
 
     </LinearLayout>
 
@@ -105,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="180dp"
+        android:layout_marginLeft="175dp"
         android:text="List"
         android:textColor="@color/white"
         android:textStyle="bold"
